refactor: rename Vendor to Provider
